notes-app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notes-api
  template:
    metadata:
      labels:
        app: notes-api
    spec:
      containers:
      - name: notes-api
        image: maktrue/project.notes-api-v2:v1
        ports:
        - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: notes-api
spec:
  selector:
    app: notes-api
  ports:
    - port: 8085
      targetPort: 8085
      nodePort: 30085   # фиксированный внешний порт (можно заменить на любой в диапазоне 30000-32767)
  type: NodePort
