notes-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: notes.k8s-5.sa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notes-api
            port:
              number: 8085
